added allure report test